# vnx-examples

./: .gitignore  CMakeLists.txt  README.md  codegen.sh  create_files.sh  doxygen.cfg  make.sh  make_debug.sh
examples/: CMakeLists.txt
examples/benchmark_async_request_response/: CMakeLists.txt  README.md  benchmark_async_request_response.cpp
examples/benchmark_raw_data_throughput/: README.md
examples/benchmark_raw_data_throughput/config/: Camera.json
examples/benchmark_request_response/: CMakeLists.txt  README.md  benchmark_request_response.cpp
examples/benchmark_struct_data_throughput/: README.md
examples/benchmark_struct_data_throughput/config/: Lidar.json
examples/configuration_example/: CMakeLists.txt  README.md  configuration_example.cpp
examples/configuration_example/config/: SomeModule.json
examples/local_publish_subscribe/: README.md
examples/local_publish_subscribe/config/: Camera.json  ImageProcessor.json
examples/record_file_api/: CMakeLists.txt  record_file_api.cpp
examples/remote_publish_subscribe/: README.md
examples/remote_publish_subscribe/Box_A/config/: Lidar.json  Router.json
examples/remote_publish_subscribe/Box_B/config/: Router.json
examples/zero_copy_publish_subscribe/: CMakeLists.txt  README.md  zero_copy_publish_subscribe.cpp
include/example/: CameraSensor.h  Database.h  FileServer.h  ImageProcessor.h  LidarProcessor.h  LidarSensor.h
interface/: File.vni  InputOutputError.vni  LidarInfo.vni  LidarPointCloud.vni  Object.vni  Table.vni  Transaction.vni  User.vni  lidar_point_t.vni  package.vni  transaction_type_e.vni
modules/: CameraSensor.vni  Database.vni  FileServer.vni  ImageProcessor.vni  LidarProcessor.vni  LidarSensor.vni
src/: LidarInfo.cpp  Object.cpp  User.cpp  camera_sensor.cpp  database_main.cpp  database_server.cpp  file_server.cpp  image_processor.cpp  lidar_processor.cpp  lidar_sensor.cpp
